@@ -7,14 +7,26 @@ import (
 	"github.com/docker/docker/api/types"
 
 	"github.com/elastic/beats/libbeat/common"
+	"github.com/elastic/beats/metricbeat/module/docker"
 )
 
 var cpuService CPUService
-var statsList = make([]types.StatsJSON, 3)
+
+func cpuUsageFor(stats types.StatsJSON) *cpuUsage {
+	u := cpuUsage{
+		Stat:        &docker.Stat{Stats: stats},
+		systemDelta: 1000000000, // Nanoseconds in a second
+	}
+	if len(stats.CPUStats.CPUUsage.PercpuUsage) == 0 {
+		u.cpus = 1
+	}
+	return &u
+}
 
 func TestCPUService_PerCpuUsage(t *testing.T) {
 	oldPerCpuValuesTest := [][]uint64{{1, 9, 9, 5}, {1, 2, 3, 4}, {0, 0, 0, 0}}
 	newPerCpuValuesTest := [][]uint64{{100000001, 900000009, 900000009, 500000005}, {101, 202, 303, 404}, {0, 0, 0, 0}}
+	var statsList = make([]types.StatsJSON, 3)
 	for index := range statsList {
 		statsList[index].PreCPUStats.CPUUsage.PercpuUsage = oldPerCpuValuesTest[index]
 		statsList[index].CPUStats.CPUUsage.PercpuUsage = newPerCpuValuesTest[index]
@@ -24,16 +36,16 @@ func TestCPUService_PerCpuUsage(t *testing.T) {
 		expected common.MapStr
 	}{
 		{statsList[0], common.MapStr{
-			"0": common.MapStr{"pct": float64(0.10)},
-			"1": common.MapStr{"pct": float64(0.90)},
-			"2": common.MapStr{"pct": float64(0.90)},
-			"3": common.MapStr{"pct": float64(0.50)},
+			"0": common.MapStr{"pct": float64(0.40)},
+			"1": common.MapStr{"pct": float64(3.60)},
+			"2": common.MapStr{"pct": float64(3.60)},
+			"3": common.MapStr{"pct": float64(2.00)},
 		}},
 		{statsList[1], common.MapStr{
-			"0": common.MapStr{"pct": float64(0.0000001)},
-			"1": common.MapStr{"pct": float64(0.0000002)},
-			"2": common.MapStr{"pct": float64(0.0000003)},
-			"3": common.MapStr{"pct": float64(0.0000004)},
+			"0": common.MapStr{"pct": float64(0.0000004)},
+			"1": common.MapStr{"pct": float64(0.0000008)},
+			"2": common.MapStr{"pct": float64(0.0000012)},
+			"3": common.MapStr{"pct": float64(0.0000016)},
 		}},
 		{statsList[2], common.MapStr{
 			"0": common.MapStr{"pct": float64(0)},
@@ -43,7 +55,8 @@ func TestCPUService_PerCpuUsage(t *testing.T) {
 		}},
 	}
 	for _, tt := range testCase {
-		out := perCpuUsage(&tt.given)
+		usage := cpuUsageFor(tt.given)
+		out := usage.PerCPU()
 		// Remove ticks for test
 		for _, s := range out {
 			s.(common.MapStr).Delete("ticks")
@@ -57,6 +70,7 @@ func TestCPUService_PerCpuUsage(t *testing.T) {
 func TestCPUService_TotalUsage(t *testing.T) {
 	oldTotalValuesTest := []uint64{100, 50, 10}
 	totalValuesTest := []uint64{2, 500000050, 10}
+	var statsList = make([]types.StatsJSON, 3)
 	for index := range statsList {
 		statsList[index].PreCPUStats.CPUUsage.TotalUsage = oldTotalValuesTest[index]
 		statsList[index].CPUStats.CPUUsage.TotalUsage = totalValuesTest[index]
@@ -70,7 +84,8 @@ func TestCPUService_TotalUsage(t *testing.T) {
 		{statsList[2], 0},
 	}
 	for _, tt := range testCase {
-		out := totalUsage(&tt.given)
+		usage := cpuUsageFor(tt.given)
+		out := usage.Total()
 		if tt.expected != out {
 			t.Errorf("totalUsage(%v) => %v, want %v", tt.given.CPUStats.CPUUsage.TotalUsage, out, tt.expected)
 		}
@@ -80,6 +95,7 @@ func TestCPUService_TotalUsage(t *testing.T) {
 func TestCPUService_UsageInKernelmode(t *testing.T) {
 	usageOldValuesTest := []uint64{100, 10, 500000050}
 	usageValuesTest := []uint64{3, 500000010, 500000050}
+	var statsList = make([]types.StatsJSON, 3)
 	for index := range statsList {
 		statsList[index].PreCPUStats.CPUUsage.UsageInKernelmode = usageOldValuesTest[index]
 		statsList[index].CPUStats.CPUUsage.UsageInKernelmode = usageValuesTest[index]
@@ -93,7 +109,8 @@ func TestCPUService_UsageInKernelmode(t *testing.T) {
 		{statsList[2], 0},
 	}
 	for _, tt := range testCase {
-		out := usageInKernelmode(&tt.given)
+		usage := cpuUsageFor(tt.given)
+		out := usage.InKernelMode()
 		if out != tt.expected {
 			t.Errorf("usageInKernelmode(%v) => %v, want %v", tt.given.CPUStats.CPUUsage.UsageInKernelmode, out, tt.expected)
 		}
@@ -103,6 +120,7 @@ func TestCPUService_UsageInKernelmode(t *testing.T) {
 func TestCPUService_UsageInUsermode(t *testing.T) {
 	usageOldValuesTest := []uint64{0, 1965, 500}
 	usageValuesTest := []uint64{500000000, 325, 1000000500}
+	var statsList = make([]types.StatsJSON, 3)
 	for index := range statsList {
 		statsList[index].PreCPUStats.CPUUsage.UsageInUsermode = usageOldValuesTest[index]
 		statsList[index].CPUStats.CPUUsage.UsageInUsermode = usageValuesTest[index]
@@ -116,7 +134,8 @@ func TestCPUService_UsageInUsermode(t *testing.T) {
 		{statsList[2], 1},
 	}
 	for _, tt := range testCase {
-		out := usageInUsermode(&tt.given)
+		usage := cpuUsageFor(tt.given)
+		out := usage.InUserMode()
 		if out != tt.expected {
 			t.Errorf("usageInUsermode(%v) => %v, want %v", tt.given.CPUStats.CPUUsage.UsageInUsermode, out, tt.expected)
 		}
